--- a/less/footer.less
+++ b/less/footer.less
@@ -1,22 +1,28 @@
 footer {
+// Footer container Styling
+
+
+// Text Styling
   font-size: 1.6em;
+  color: white;
+// Flex Styling
   display: flex;
   flex-direction: column;
   align-items: center;
-
   flex-shrink: 0;
-
-  padding-top: 60px;
+// Background Styling
+  padding-top: 70px;
   padding-bottom: 60px;
-
   background: black;
-  color: white;
-  .nav-items {
+
+// Footer content (Social Icons & Text)
+  .social-icons {
     margin-bottom: 50px;
-  }
-  a {
-    color: white;
-    margin-left: 5px;
-    margin-right: 5px;
+
+    a {
+      color: white;
+      font-size: 1.4em;
+      margin-left: 6px;
+      margin-right: 6px;
   }
 }
